@@ -1,3 +1,4 @@
+* allow bytes-stream instead of filename in XRDML
 * enable setting free lattice parameters from the Crystal instance
 * minor code improvements, forcing flake8 to pass upon merging a PR #149
 * fix typo in Poisson ratio of GaInAs Darwin model (introduced in 1.7.4)
